test/conformance/chainsaw/generate-mutating-admission-policy-v1/jsonpatch/mutatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: mpol-add-label-jsonpatch-binding
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: MutatingPolicy
    name: add-label-jsonpatch
spec:
  policyName: mpol-add-label-jsonpatch
